clusters/firefly/apps/speedtest-tracker/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: speedtest-tracker
spec:
  redirectScheme:
    scheme: https
    permanent: true
