clusters/firefly/apps/speedtest-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      automountServiceAccountToken: false
      containers:
        - name: speedtest-tracker
          image: linuxserver/speedtest-tracker:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - mountPath: /config
              name: speedtest-tracker-config
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "512Mi"
              cpu: "200m"
              ephemeral-storage: "2Gi"
      volumes:
        - name: speedtest-tracker-config
          persistentVolumeClaim:
            claimName: speedtest-tracker-config
