clusters/firefly/apps/speedtest-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
spec:
  selector:
    app: speedtest-tracker
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
