clusters/firefly/apps/speedtest-tracker/ingress.yaml
# HTTP ingress with redirect to HTTPS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker-ingress-http
  namespace: speedtest-tracker
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: speedtest-tracker-https-redirect@kubernetescrd
spec:
  rules:
    - host: speedtest-tracker.sargeant.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-tracker
                port:
                  number: 80
---
# HTTPS ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker-ingress-https
  namespace: speedtest-tracker
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-to-https: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  tls:
    - hosts:
        - speedtest-tracker.sargeant.co
      secretName: speedtest-tracker-tls
  rules:
    - host: speedtest-tracker.sargeant.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-tracker
                port:
                  number: 80
